// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWithTags Display tests should match snapshot 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="downshift-1-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component l"
    >
      <div
        class="component l block hasRightAddons"
      >
        <div
          class="field inner"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper contentWrapperVertical"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-1-menu"
                  aria-labelledby="downshift-1-label"
                  autocomplete="off"
                  class="input"
                  id="downshift-0-input"
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-l"
          >
            <span
              class="arrow"
            />
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectWithTags Display tests should match snapshot with selected tags 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component l"
    >
      <div
        class="component l block hasRightAddons"
      >
        <div
          class="field inner filled"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper contentWrapperVertical hasTags"
              >
                <button
                  class="component xs checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      H
                      <svg
                        class="tagCross"
                        focusable="false"
                        height="18"
                        version="1"
                        viewBox="0 0 18 18"
                        width="18"
                      >
                        <path
                          d="M14.646 2.646L9 8.293 3.354 2.646l-.708.708L8.293 9l-5.647 5.646.708.708L9 9.707l5.646 5.647.708-.708L9.707 9l5.647-5.646z"
                          fill="#FFF"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <button
                  class="component xs checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      Li
                      <svg
                        class="tagCross"
                        focusable="false"
                        height="18"
                        version="1"
                        viewBox="0 0 18 18"
                        width="18"
                      >
                        <path
                          d="M14.646 2.646L9 8.293 3.354 2.646l-.708.708L8.293 9l-5.647 5.646.708.708L9 9.707l5.646 5.647.708-.708L9.707 9l5.647-5.646z"
                          fill="#FFF"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <button
                  class="component xs checked tag"
                  type="button"
                >
                  <span>
                    <span
                      class="tagContentWrap"
                    >
                      Na
                      <svg
                        class="tagCross"
                        focusable="false"
                        height="18"
                        version="1"
                        viewBox="0 0 18 18"
                        width="18"
                      >
                        <path
                          d="M14.646 2.646L9 8.293 3.354 2.646l-.708.708L8.293 9l-5.647 5.646.708.708L9 9.707l5.646 5.647.708-.708L9.707 9l5.647-5.646z"
                          fill="#FFF"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-3-menu"
                  aria-labelledby="downshift-3-label"
                  autocomplete="off"
                  class="input"
                  id="downshift-2-input"
                  placeholder=""
                  tabindex="0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addons rightAddons addons addons-size-l"
          >
            <span
              class="arrow"
            />
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
